Bug 1717209: Copy to a new canvas texture, when re-forwarding a texture that is still read locked. r=lsalzman a=pascalc

If we are re-forwarding a texture that has not been updated then it might still
be read locked. We rely on the read lock for us to know when the Compositor or
Renderer has finished with the texture. So this change copies it to a new
texture, which we can safely read lock.
If the texture is not read locked then we ensure that it is set as updated,
which means we will read lock it as we forward it.

Differential Revision: https://phabricator.services.mozilla.com/D119546